[gd_scene load_steps=40 format=3 uid="uid://di4kqbjwtefkk"]

[ext_resource type="Script" path="res://systems/games/game1/game1.gd" id="1_h5acu"]
[ext_resource type="Script" path="res://systems/games/game1/Animator.gd" id="2_jf0en"]
[ext_resource type="Shader" path="res://assets/game1/shader/back1.gdshader" id="2_lxpxx"]
[ext_resource type="Script" path="res://systems/games/game1/game.gd" id="2_ooibs"]
[ext_resource type="Shader" path="res://assets/game1/shader/back2.gdshader" id="2_u8iip"]
[ext_resource type="Texture2D" uid="uid://d3nbsys7wmv84" path="res://assets/game1/background_moving2.png" id="3_1gyn6"]
[ext_resource type="Texture2D" uid="uid://bsfu7admwidaq" path="res://assets/game1/background_moving.png" id="3_7wgrb"]
[ext_resource type="Script" path="res://universal_scripts/Control.gd" id="3_ss5tk"]
[ext_resource type="Script" path="res://systems/games/game1/music_tile.gd" id="3_y0d48"]
[ext_resource type="Script" path="res://systems/games/game1/Game_Intro.gd" id="5_71xmo"]
[ext_resource type="PackedScene" uid="uid://dq5jw5oofwekp" path="res://systems/misc/clickable/change_scene/clickable_change_scene.tscn" id="6_y7k77"]
[ext_resource type="PackedScene" uid="uid://ka6f2ksq5rlp" path="res://systems/misc/display_money/money.tscn" id="7_xdahh"]
[ext_resource type="Theme" uid="uid://ekb4yt0bhvmu" path="res://assets/themes/game1_texture_theme.tres" id="8_18ghq"]
[ext_resource type="PackedScene" uid="uid://dppjchrp5io0f" path="res://systems/pet/pet.tscn" id="8_sqsqg"]
[ext_resource type="Texture2D" uid="uid://dn7fd8rjf62d8" path="res://assets/game1/tile-sheet.png" id="10_6n462"]
[ext_resource type="FontFile" uid="uid://jsenqrxfhpga" path="res://assets/fonts/MinecraftBoldItalic-1y1e.otf" id="11_6e3p3"]
[ext_resource type="Texture2D" uid="uid://b2ibqnxsq243x" path="res://assets/universal/hunger_icon.png" id="11_eugcs"]
[ext_resource type="Theme" uid="uid://c5hch5i6dr5ws" path="res://assets/themes/game_theme.tres" id="11_m0x0s"]
[ext_resource type="AudioStream" uid="uid://hh8ug2aib24f" path="res://assets/game1/sounds/Do.wav" id="11_sttvg"]
[ext_resource type="Theme" uid="uid://bywvvpuodhlu0" path="res://assets/themes/universal_theme.tres" id="12_tbmpk"]
[ext_resource type="Texture2D" uid="uid://dlkgav0sx3lm1" path="res://assets/game1/game_intro_background.png" id="12_wxj4d"]
[ext_resource type="AudioStream" uid="uid://bf21gue88772x" path="res://assets/game1/sounds/Re.wav" id="13_eo1or"]
[ext_resource type="Script" path="res://systems/games/game1/Intro_Control.gd" id="13_qgqy2"]
[ext_resource type="AudioStream" uid="uid://b0b7m0igtrqeh" path="res://assets/game1/sounds/Mi.wav" id="14_fkc28"]
[ext_resource type="Texture2D" uid="uid://cmh7p083lhl00" path="res://assets/game1/title.png" id="15_8dici"]
[ext_resource type="AudioStream" uid="uid://cy0p67lim8j6i" path="res://assets/game1/sounds/Fa.wav" id="15_cvxfq"]
[ext_resource type="AudioStream" uid="uid://bbspo6xnkf41n" path="res://assets/game1/sounds/So.wav" id="16_73f1u"]
[ext_resource type="FontFile" uid="uid://cqhjm2fdma250" path="res://assets/fonts/MinecraftBold-nMK1.otf" id="16_acgpu"]
[ext_resource type="AudioStream" uid="uid://cksjl4nepywit" path="res://assets/game1/sounds/La.wav" id="17_pdgox"]
[ext_resource type="AudioStream" uid="uid://cvicx8py657yb" path="res://assets/game1/sounds/Ti.wav" id="18_g0aaw"]
[ext_resource type="AudioStream" uid="uid://dy7bccqypnbb5" path="res://assets/game1/sounds/Do - High.wav" id="19_ag56d"]
[ext_resource type="PackedScene" uid="uid://4ne55yncfru3" path="res://systems/misc/transition_layer/transition_layer.tscn" id="24_ii57i"]
[ext_resource type="PackedScene" uid="uid://c0wpewocb0isa" path="res://systems/misc/time_limit_checker/time_limit_checker.tscn" id="33_31p4k"]

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6im47"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_56gch"]
shader = ExtResource("2_u8iip")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ouf1y"]
shader = ExtResource("2_lxpxx")

[sub_resource type="Animation" id="Animation_wkghc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tiles:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(28, 991.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Tiles:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.45098, 0, 1)]
}

[sub_resource type="Animation" id="Animation_6y2he"]
resource_name = "tiles_appear"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tiles:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(0.233258, 1),
"update": 0,
"values": [Vector2(28, 991.5), Vector2(28, 308.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Tiles:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2, 3),
"transitions": PackedFloat32Array(0.258816, 1),
"update": 0,
"values": [Color(1, 0.45098, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3taw2"]
_data = {
"RESET": SubResource("Animation_wkghc"),
"tiles_appear": SubResource("Animation_6y2he")
}

[node name="Game1" type="Node2D"]
script = ExtResource("1_h5acu")

[node name="Animator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6im47")
}
script = ExtResource("2_jf0en")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 540.0
offset_bottom = 960.0
script = ExtResource("3_ss5tk")

[node name="Background" type="Control" parent="Control"]
modulate = Color(0.933333, 0.619608, 0.294118, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="TextureRect" type="ColorRect" parent="Control/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.907942, 0.907942, 0.907942, 1)

[node name="Moving2" type="TextureRect" parent="Control/Background"]
texture_repeat = 2
material = SubResource("ShaderMaterial_56gch")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_1gyn6")

[node name="Moving" type="TextureRect" parent="Control/Background"]
texture_repeat = 2
material = SubResource("ShaderMaterial_ouf1y")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_7wgrb")

[node name="Game" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_ooibs")

[node name="Animator_Tiles" type="AnimationPlayer" parent="Control/Game"]
libraries = {
"": SubResource("AnimationLibrary_3taw2")
}

[node name="Sound" type="AudioStreamPlayer" parent="Control/Game/Animator_Tiles"]

[node name="Tiles" type="GridContainer" parent="Control/Game"]
modulate = Color(1, 0.45098, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 28.0
offset_top = 991.5
offset_right = 512.0
offset_bottom = 1470.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_18ghq")
columns = 3
metadata/_edit_group_ = true

[node name="tile1" type="Button" parent="Control/Game/Tiles"]
custom_minimum_size = Vector2(156, 156)
layout_mode = 2
size_flags_stretch_ratio = 0.0
script = ExtResource("3_y0d48")

[node name="Tile_Sound" type="AudioStreamPlayer" parent="Control/Game/Tiles/tile1"]
stream = ExtResource("11_sttvg")

[node name="Tile_Sprite" type="Sprite2D" parent="Control/Game/Tiles/tile1"]
position = Vector2(78, 78)
scale = Vector2(4, 4)
texture = ExtResource("10_6n462")
hframes = 3

[node name="tile2" type="Button" parent="Control/Game/Tiles"]
custom_minimum_size = Vector2(156, 156)
layout_mode = 2
size_flags_stretch_ratio = 0.0
script = ExtResource("3_y0d48")

[node name="Tile_Sound" type="AudioStreamPlayer" parent="Control/Game/Tiles/tile2"]
stream = ExtResource("13_eo1or")

[node name="Tile_Sprite" type="Sprite2D" parent="Control/Game/Tiles/tile2"]
position = Vector2(78, 78)
scale = Vector2(4, 4)
texture = ExtResource("10_6n462")
hframes = 3

[node name="tile3" type="Button" parent="Control/Game/Tiles"]
custom_minimum_size = Vector2(156, 156)
layout_mode = 2
size_flags_stretch_ratio = 0.0
script = ExtResource("3_y0d48")

[node name="Tile_Sound" type="AudioStreamPlayer" parent="Control/Game/Tiles/tile3"]
stream = ExtResource("14_fkc28")

[node name="Tile_Sprite" type="Sprite2D" parent="Control/Game/Tiles/tile3"]
position = Vector2(78, 78)
scale = Vector2(4, 4)
texture = ExtResource("10_6n462")
hframes = 3

[node name="tile4" type="Button" parent="Control/Game/Tiles"]
custom_minimum_size = Vector2(156, 156)
layout_mode = 2
size_flags_stretch_ratio = 0.0
script = ExtResource("3_y0d48")

[node name="Tile_Sound" type="AudioStreamPlayer" parent="Control/Game/Tiles/tile4"]
stream = ExtResource("15_cvxfq")

[node name="Tile_Sprite" type="Sprite2D" parent="Control/Game/Tiles/tile4"]
position = Vector2(78, 78)
scale = Vector2(4, 4)
texture = ExtResource("10_6n462")
hframes = 3

[node name="tile5" type="Button" parent="Control/Game/Tiles"]
custom_minimum_size = Vector2(156, 156)
layout_mode = 2
size_flags_stretch_ratio = 0.0
script = ExtResource("3_y0d48")

[node name="Tile_Sound" type="AudioStreamPlayer" parent="Control/Game/Tiles/tile5"]
stream = ExtResource("16_73f1u")

[node name="Tile_Sprite" type="Sprite2D" parent="Control/Game/Tiles/tile5"]
position = Vector2(78, 78)
scale = Vector2(4, 4)
texture = ExtResource("10_6n462")
hframes = 3

[node name="tile6" type="Button" parent="Control/Game/Tiles"]
custom_minimum_size = Vector2(156, 156)
layout_mode = 2
size_flags_stretch_ratio = 0.0
script = ExtResource("3_y0d48")

[node name="Tile_Sound" type="AudioStreamPlayer" parent="Control/Game/Tiles/tile6"]
stream = ExtResource("17_pdgox")

[node name="Tile_Sprite" type="Sprite2D" parent="Control/Game/Tiles/tile6"]
position = Vector2(78, 78)
scale = Vector2(4, 4)
texture = ExtResource("10_6n462")
hframes = 3

[node name="tile7" type="Button" parent="Control/Game/Tiles"]
custom_minimum_size = Vector2(156, 156)
layout_mode = 2
size_flags_stretch_ratio = 0.0
script = ExtResource("3_y0d48")

[node name="Tile_Sound" type="AudioStreamPlayer" parent="Control/Game/Tiles/tile7"]
stream = ExtResource("18_g0aaw")

[node name="Tile_Sprite" type="Sprite2D" parent="Control/Game/Tiles/tile7"]
position = Vector2(78, 78)
scale = Vector2(4, 4)
texture = ExtResource("10_6n462")
hframes = 3

[node name="tile8" type="Button" parent="Control/Game/Tiles"]
custom_minimum_size = Vector2(156, 156)
layout_mode = 2
size_flags_stretch_ratio = 0.0
script = ExtResource("3_y0d48")

[node name="Tile_Sound" type="AudioStreamPlayer" parent="Control/Game/Tiles/tile8"]
stream = ExtResource("19_ag56d")

[node name="Tile_Sprite" type="Sprite2D" parent="Control/Game/Tiles/tile8"]
position = Vector2(78, 78)
scale = Vector2(4, 4)
texture = ExtResource("10_6n462")
hframes = 3

[node name="tile9" type="Button" parent="Control/Game/Tiles"]
custom_minimum_size = Vector2(156, 156)
layout_mode = 2
size_flags_stretch_ratio = 0.0
script = ExtResource("3_y0d48")

[node name="Tile_Sound" type="AudioStreamPlayer" parent="Control/Game/Tiles/tile9"]
stream = ExtResource("19_ag56d")
pitch_scale = 1.5

[node name="Tile_Sprite" type="Sprite2D" parent="Control/Game/Tiles/tile9"]
position = Vector2(78, 78)
scale = Vector2(4, 4)
texture = ExtResource("10_6n462")
hframes = 3

[node name="Level" type="Label" parent="Control/Game"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -94.5
offset_top = 210.0
offset_right = 94.5
offset_bottom = 255.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("11_6e3p3")
theme_override_font_sizes/font_size = 45
text = "LEVEL: 1"

[node name="Intro_Control" type="Control" parent="Control/Game"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -270.0
offset_top = -1440.0
offset_right = 270.0
offset_bottom = -480.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("13_qgqy2")
metadata/_edit_group_ = true

[node name="Game_Intro" type="TextureRect" parent="Control/Game/Intro_Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_wxj4d")
script = ExtResource("5_71xmo")

[node name="Control" type="Control" parent="Control/Game/Intro_Control/Game_Intro"]
layout_mode = 1
anchor_left = 0.5
anchor_top = 0.269
anchor_right = 0.5
anchor_bottom = 0.269
offset_left = -20.0
offset_top = -20.24
offset_right = 20.0
offset_bottom = 19.76
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Sprite2D" parent="Control/Game/Intro_Control/Game_Intro/Control"]
position = Vector2(20, 31)
scale = Vector2(4, 4)
texture = ExtResource("15_8dici")

[node name="Highest_Level_Container" type="VBoxContainer" parent="Control/Game/Intro_Control/Game_Intro"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.511
anchor_right = 0.5
anchor_bottom = 0.511
offset_left = -174.5
offset_top = 0.439972
offset_right = 174.5
offset_bottom = 58.44
grow_horizontal = 2
grow_vertical = 2

[node name="Highest_LevelN" type="Label" parent="Control/Game/Intro_Control/Game_Intro/Highest_Level_Container"]
self_modulate = Color(0.258824, 1, 0.219608, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("16_acgpu")
theme_override_font_sizes/font_size = 26
text = "Highest Level Normal: 0"

[node name="Highest_LevelH" type="Label" parent="Control/Game/Intro_Control/Game_Intro/Highest_Level_Container"]
self_modulate = Color(1, 0.713726, 0.196078, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("16_acgpu")
theme_override_font_sizes/font_size = 26
text = "Highest Level Hard: 0"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Game/Intro_Control/Game_Intro"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = 151.0
offset_right = 125.0
offset_bottom = 369.0
grow_horizontal = 2
grow_vertical = 2

[node name="Normal" type="Button" parent="Control/Game/Intro_Control/Game_Intro/VBoxContainer"]
custom_minimum_size = Vector2(250, 70)
layout_mode = 2
theme = ExtResource("11_m0x0s")
theme_override_font_sizes/font_size = 30
text = "Normal
"

[node name="Hard" type="Button" parent="Control/Game/Intro_Control/Game_Intro/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme = ExtResource("11_m0x0s")
theme_override_font_sizes/font_size = 30
text = "Hard
"

[node name="Games_Button" parent="Control/Game/Intro_Control/Game_Intro/VBoxContainer" instance=ExtResource("6_y7k77")]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme = ExtResource("11_m0x0s")
theme_override_font_sizes/font_size = 30
text = "Back"

[node name="Info" type="VBoxContainer" parent="Control/Game"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -260.0
offset_top = 25.0
offset_right = 181.0
offset_bottom = 119.0
grow_horizontal = 2
theme_override_constants/separation = 20

[node name="Hunger" type="HBoxContainer" parent="Control/Game/Info"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Control" type="Control" parent="Control/Game/Info/Hunger"]
custom_minimum_size = Vector2(51, 33)
layout_mode = 2

[node name="HungerIcon" type="Sprite2D" parent="Control/Game/Info/Hunger/Control"]
position = Vector2(25.5, 23.5)
scale = Vector2(3, 3)
texture = ExtResource("11_eugcs")

[node name="Hunger_Bar" type="ProgressBar" parent="Control/Game/Info/Hunger"]
custom_minimum_size = Vector2(375, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("12_tbmpk")
theme_override_font_sizes/font_size = 20
value = 100.0

[node name="Money_Count" parent="Control/Game/Info" instance=ExtResource("7_xdahh")]
layout_mode = 2

[node name="Timer" type="Timer" parent="Control/Game"]
one_shot = true

[node name="Pet" parent="." instance=ExtResource("8_sqsqg")]
visible = false

[node name="Transition_Layer" parent="." instance=ExtResource("24_ii57i")]

[node name="TimeLimitChecker" parent="." instance=ExtResource("33_31p4k")]

[connection signal="button_down" from="Control/Game/Tiles/tile1" to="Control/Game/Tiles/tile1" method="_on_button_down"]
[connection signal="button_down" from="Control/Game/Tiles/tile2" to="Control/Game/Tiles/tile2" method="_on_button_down"]
[connection signal="button_down" from="Control/Game/Tiles/tile3" to="Control/Game/Tiles/tile3" method="_on_button_down"]
[connection signal="button_down" from="Control/Game/Tiles/tile4" to="Control/Game/Tiles/tile4" method="_on_button_down"]
[connection signal="button_down" from="Control/Game/Tiles/tile5" to="Control/Game/Tiles/tile5" method="_on_button_down"]
[connection signal="button_down" from="Control/Game/Tiles/tile6" to="Control/Game/Tiles/tile6" method="_on_button_down"]
[connection signal="button_down" from="Control/Game/Tiles/tile7" to="Control/Game/Tiles/tile7" method="_on_button_down"]
[connection signal="button_down" from="Control/Game/Tiles/tile8" to="Control/Game/Tiles/tile8" method="_on_button_down"]
[connection signal="button_down" from="Control/Game/Tiles/tile9" to="Control/Game/Tiles/tile9" method="_on_button_down"]
[connection signal="button_up" from="Control/Game/Intro_Control/Game_Intro/VBoxContainer/Normal" to="Control/Game/Intro_Control/Game_Intro" method="_on_normal_button_up"]
[connection signal="button_up" from="Control/Game/Intro_Control/Game_Intro/VBoxContainer/Hard" to="Control/Game/Intro_Control/Game_Intro" method="_on_hard_button_up"]
